see RN2.2.3 (20200416)